<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/move_card_width"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:descendantFocusability="afterDescendants"
    android:layout_marginHorizontal="10dp"
    android:id="@+id/mainBg"

    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/bgColor"
        app:cardBackgroundColor="@color/colorPrimary"
        android:padding="10dp"
        app:cardCornerRadius="@dimen/move_card_border_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_normal_bg"
            android:id="@+id/cardView"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:scaleType="centerCrop"
                android:layout_height="@dimen/move_card_image_height"
                app:srcCompat="@drawable/dummy_move" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:paddingVertical="10dp"
                android:paddingHorizontal="10dp"
                android:orientation="vertical"


                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:id="@+id/title"
                    android:text="@string/dummy_title"
                    android:textColor="#fff"
                    android:textSize="@dimen/move_title_size"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    >

                    <TextView
                        android:id="@+id/sub_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/time"
                        android:maxLines="1"
                        android:text="@string/new_york_post"
                        android:textColor="#fff"
                        android:textSize="@dimen/move_sub_title_size"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:id="@+id/time"
                        android:text="@string/dummy_time"
                        android:textColor="#B1B1B1"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:textSize="11sp"
                        />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>